--- a/src/views/config/AppConfig.json
+++ b/src/views/config/AppConfig.json
@@ -6,6 +6,6 @@
   {"name":"Medium Blog","icon":"/images/medium.png","thumbnail":"","description":"", "hyperlink":"https://infernaltoast.medium.com/"},  
   {"name":"Apex MFer Youtube","icon":"/images/apexmfer.png","thumbnail":"","description":"", "hyperlink":"https://apexmfer.com"}  ,
   {"name":"0xBitcoin","icon":"/images/0xbtc.png","thumbnail":"","description":"", "hyperlink":"https://0xbitcoin.org"},
-  {"name":"Infernal's Github","icon":"/images/github.png","thumbnail":"","description":"", "hyperlink":"https://github.com/admazzola"}  ,
+  {"name":"Infernal's Github","icon":"/images/github.png","thumbnail":"","description":"", "hyperlink":"https://github.com/apexmfer"}  ,
   {"name":"Open Source MFers","icon":"/images/cutefly.png","thumbnail":"","description":"", "hyperlink":"https://github.com/orgs/OpenSourceMfers/projects?type=beta"}  
 ]
